react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      name: react-pod
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: rotanakkosal/swarm-testing:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: NodePort
  selector:
    app: react
  ports:
    - port: 3000
      targetPort: 3000
      nodePort : 30001
